--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "tightenco/ziggy": "^2.4"
+        "longman/telegram-bot": "^0.83.1",
+        "tightenco/ziggy": "^2.4",
+        "vkcom/vk-php-sdk": "^5.131"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
